# bdrive-legacy

./: .gitignore  Cargo.toml
src/: lib.rs
src/bdrive/: hash.rs  mod.rs  paths.rs  upload.rs
src/conf/: mod.rs  mongodb.rs  paths.rs  ssh.rs
src/db/: file.rs  mod.rs
src/fs/: file.rs  file_success.rs  hash.rs  inode.rs  mod.rs  state.rs
src/ssh/: bindings.rs  mod.rs
