[package]
name = "bdrive"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.16.20"
mongodb = "2.5.0"
tokio = "1.28.0"
hex = "0.4.3"
serde = "1.0.160"
serde_json = "1.0.96"
futures = "0.3.28"
rand = "0.8.5"
ssh2 = "0.9.4"
toml = "0.7.3"
indicatif = "0.17.3"
walkdir = "2.3.3"

[[bin]]
name = "bdrive"
path = "src/bin/main.rs"